--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
     "parcel-plugin-handlebars-precompile": "^1.0.2",
     "posthtml-include": "^1.6.2",
     "sass": "^1.32.8"
+  },
+  "dependencies": {
+    "lodash.debounce": "^4.0.8"
   }
 }
